# color-grabbers

./: LICENSE  api.py  app.py  config_default.yaml  main.py  pyproject.toml
app/: app.py  config.yaml
app/dataclass/: colors.py  participant.py  qrcode.py
app/view/: admin.py
dataclass/: action.py  game.py  qrcode.py  supabase.py
static/: dns.py
view/: help.py  my_info.py  notice.py
